feat(security): risk scoring engine validated with live Base Mainnet data